metadata/force-app/main/default/objects/CustomName_uGDMY__c/CustomName_uGDMY__c.object-meta.xml
<CustomObject>
    <description>Description_FXYiE</description>
    <label>CustomLabel_nHNkq</label>
    <nameField>
        <label>CustomLabel_nHNkq</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_nHNkqs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>