metadata/force-app/main/default/objects/CustomName_uGDMY__c/fields/CustomField_WNjlf__c.field-meta.xml
<CustomField>
    <fullName>CustomField_WNjlf__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldOvGPD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>